[package]
name = "RustWebServiceTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_okapi = "~0.5"
rocket = "~0.4"
rocket_contrib = "~0.4"
schemars = "0.7"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"

utoipa = { version = "3", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["debug-embed"] }
okapi = { version = "~0.4", features = ["derive_json_schema"] }